--- a/redis-session/pom.xml
+++ b/redis-session/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>redis-action</artifactId>
         <version>1.0</version>
     </parent>
-    <groupId>com.zxb</groupId>
+    <groupId>net.zhaoxiaobin</groupId>
     <artifactId>redis-session</artifactId>
     <version>1.0</version>
 
