--- a/redisson/pom.xml
+++ b/redisson/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.11.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
