--- a/redistemplate/src/main/resources/application.yml
+++ b/redistemplate/src/main/resources/application.yml
@@ -9,23 +9,17 @@ spring:
 #    集群多节点配置
     cluster:
       nodes:
-#        - 172.16.133.101:6379
-#        - 172.16.133.101:6380
-#        - 172.16.133.102:6379
-#        - 172.16.133.102:6380
-#        - 172.16.133.103:6379
-#        - 172.16.133.103:6380
-        - 148.70.153.63:9426
-        - 148.70.153.63:9427
-        - 148.70.153.63:9428
-        - 148.70.153.63:9429
-        - 148.70.153.63:9430
-        - 148.70.153.63:9431
-    password: password
+        - 172.16.133.101:6379
+        - 172.16.133.101:6380
+        - 172.16.133.102:6379
+        - 172.16.133.102:6380
+        - 172.16.133.103:6379
+        - 172.16.133.103:6380
+#    password: password
     timeout: 2000
-#    lettuce:
-#      pool:
-#        max-active: 32
-#        max-idle: 8
-#        min-idle: 2
-#        max-wait: 10000
+    lettuce:
+      pool:
+        max-active: 16
+        max-idle: 8
+        min-idle: 2
+        max-wait: 10000
