--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+            <version>1.18.22</version>
         </dependency>
 
         <dependency>
